--- a/crypto/style.css
+++ b/crypto/style.css
@@ -1,277 +1,267 @@
-@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
-.bg-container{
-    background-image:url("https://static.vecteezy.com/system/resources/previews/011/641/944/non_2x/crypto-currency-concept-background-bitcoin-digital-money-background-blue-futuristic-technology-background-illustration-free-vector.jpg");
-    background-size:cover;
-    
-    height:80vh;
-    
-}
-.nav-heading{
-    font-family:"Monoton";
-}
-.navbar-align{
-    margin-left: auto;
-}
-.img1{
-    height:300px;
-    width: 400px;
-    margin-left:150px;
-    margin-right:25px;
-}
-.carouseL-slide{
-    margin:25px;
-    margin-top:50px
-}
-.carau-heading{
-    text-align: center;
-    font-family:"Bobstar ";
-    color:black;
-    padding-top:30px;
-    padding-left:25px
-   
-}
-.carau-para{
-    text-align: center;
-    font-family:"Roboto";
-    color:rgb(4, 17, 62);
-   
-    padding-left:25px
-    
-}
-.button{
-    margin-left:190px;
-}
-.bg-container-bottom{
-    text-align: center;
-    background-color:rgb(11, 11, 72);
-    background-size:cover;
-    margin-top:50px
-    
-}
-.bg-container-bottom-heading{
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-weight:bold;
-    padding-top:25px
-    
-}
-.bottom-img{
-    height:250px
-    
-}
-.bottom1-heading{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:26px;
-    margin-top: 90px;
-    padding-left:35px
-    
-}
-.bottom1-para{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:18px;
-    padding-left:35px
-}
-.container1{
-    margin:30px
+/* Services Page Specific Styles */
 
-}
-.bg-container-bottom-para{
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:18px;
-}
-.bottom2-heading{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:26px;
-    margin-top: 90px;
-    padding-right:35px
-    
-}
-.bottom2-para{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:18px;
-    padding-right:35px
-}
-.container2{
-    padding-bottom:40px;
-    margin-left:40px;
-}
-.working-container{
-    background-color: rgb(4, 4, 28);
-    background-size:cover;
-}
-.img-down{
-    width:800px;
-    height:300px;
-    padding-left:50px;
-}
-.working-container1{
-    padding-top:40px
-
-}
-.working-container2{
-    margin-right:70px;
-    padding-top:40px;
-    
-    
-
-}
-.working-container3{
-    margin-right:100px;
-    padding:40px
-
-}
-.working-heading{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "bobstar";
-    font-size:50px;
-    font-weight: bold;
-    padding-left:35px
-
-}
-.working-para{
-    text-align: left;
-    color:antiquewhite;
-    font-family: "Roboto";
-    font-size:16px;
-    padding-left:50px
-}
-.user-container{
-    text-align: center;
-    background-color:rgb(11, 11, 72);
-    background-size:cover;
-    padding-top:50px
-}
-.user-images{
-    height:200px;
-    width: 350px;
-    padding:25px;
-}
-.user-container1{
-    background-color:rgb(219, 223, 227);
-    background-size:cover;
-    width:350px;
-    border-radius:10px;
-}
-.user-container2{
-    background-color:rgb(219, 223, 227);
-    background-size:cover;
-    margin-right:25px;
-    margin-left:25px;
-    width:350px;
-    border-radius:10px;
-}
-.user-container3{
-    background-color:rgb(219, 223, 227);
-    background-size:cover;
-    width:350px;
-    border-radius:10px;
-}
-.user-heading{
-    text-align:center;
-    color:rgb(5, 5, 5);
-    font-family: "bobstar";
-    font-size:26px;
-    margin-top: 10px;
-    
-    
-}
-.user-para{
-    text-align:center;
-    color:rgb(47, 43, 38);
-    font-family: "bobstar";
-    font-size:18px;
-    
-}
-.user-main{
-    padding:40px;
-}
-.button1{
-    text-align: center;
-    margin-bottom:25px;
-}
-.last{
-    background-color: aliceblue;
-    
-}
-.last-para{
-    text-align: center;
-    padding:50px;
-}
-.bg-heading{
-    text-align:center;
-    font-family:"Caveat";
-    font-weight:bold;
-    font-size: 50px;
-    margin-top:200px;
-    margin-left:100px;
-    color:antiquewhite;
-    
-    
-}
-.bg-button{
-    text-align:center;
-    margin-left:750px;
-}
-.bg-container1{
-    background-color:rgb(24, 24, 24);
+/* Services Hero Section */
+.services-hero {
+    background-image: url("https://static.vecteezy.com/system/resources/previews/011/641/944/non_2x/crypto-currency-concept-background-bitcoin-digital-money-background-blue-futuristic-technology-background-illustration-free-vector.jpg");
     background-size: cover;
+    background-position: center;
+    padding: 80px 0;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 50px;
+}
 
-}
-.pic1{
-    width:700px;
-    height:200px;
-    padding-left:50px;
-}
-.heading-container1{
-    text-align: center;
-    font-family: "Bobster";
-    color:aliceblue
-}
-.owner-heading{
-    text-align: center;
-    font-family:"Roboto";
-    color:rgb(8, 4, 30);
+.services-main-heading {
+    font-family: "Caveat", cursive;
     font-weight: bold;
+    font-size: 50px;
+    color: antiquewhite;
+    margin-bottom: 20px;
 }
-.owner-para{
+
+.services-main-para {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    color: antiquewhite;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+/* Services Cards Section */
+.services-container {
+    background-color: rgb(11, 11, 72);
+    padding: 50px 0;
+}
+
+.service-card {
+    background-color: rgb(219, 223, 227);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 30px;
+    transition: transform 0.3s ease;
+    height: 100%;
+}
+
+.service-card:hover {
+    transform: translateY(-10px);
+}
+
+.service-icon {
     text-align: center;
-    font-family:"Roboto";
-    color:rgb(35, 88, 173);
+    margin-bottom: 20px;
+}
+
+.service-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.service-title {
+    font-family: "bobstar", sans-serif;
+    font-size: 24px;
     font-weight: bold;
-}
-.owner-images{
-    height:320px;
-    width: 300px;
-    padding:25px;
-}
-.vertical-navs{
-    height:100vh;
-    width:50vh;
-}
-.nav-link{
-    color:rgb(150, 157, 163);
-}
-.grid{
+    color: rgb(5, 5, 5);
     text-align: center;
-    margin-left: 10px;
-    margin-top: 12px;
-    color:rgb(150, 157, 163);
+    margin-bottom: 15px;
 }
-.horizontal-container{
-    background-color:rgb(36, 32, 32);
-    background-size:cover;
-    width:150vw;
-}
-.hori-heading{
+
+.service-description {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    color: rgb(47, 43, 38);
     text-align: center;
+    margin-bottom: 20px;
+}
+
+.service-link {
+    display: block;
+    width: 150px;
+    margin: 0 auto;
+}
+
+/* Feature Highlight Section */
+.feature-highlight {
+    background-color: rgb(4, 4, 28);
+    padding: 70px 0;
+}
+
+.feature-img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.feature-content {
+    padding: 30px;
+    color: #fff;
+}
+
+.feature-heading {
+    font-family: "Bobster", sans-serif;
+    font-size: 36px;
+    font-weight: bold;
+    color: antiquewhite;
+    margin-bottom: 20px;
+}
+
+.feature-para {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    color: antiquewhite;
+    margin-bottom: 25px;
+}
+
+.feature-list {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    color: antiquewhite;
+    margin-bottom: 30px;
+    padding-left: 20px;
+}
+
+.feature-list li {
+    margin-bottom: 10px;
+}
+
+.feature-button {
+    font-size: 16px;
+    padding: 10px 20px;
+}
+
+/* Premium Services Section */
+.premium-services {
+    background-color: rgb(11, 11, 72);
+    padding: 70px 0;
+}
+
+.premium-heading {
+    font-family: "bobstar", sans-serif;
+    font-size: 40px;
+    font-weight: bold;
+    color: antiquewhite;
+    margin-bottom: 15px;
+}
+
+.premium-para {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    color: antiquewhite;
+    margin-bottom: 30px;
+}
+
+.premium-card {
+    background-color: rgb(219, 223, 227);
+    border-radius: 10px;
+    padding: 20px;
+    margin-bottom: 30px;
+    transition: transform 0.3s ease;
+    height: 100%;
+}
+
+.premium-card:hover {
+    transform: translateY(-10px);
+}
+
+.premium-icon {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.premium-img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+}
+
+.premium-title {
+    font-family: "bobstar", sans-serif;
+    font-size: 22px;
+    font-weight: bold;
+    color: rgb(5, 5, 5);
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.premium-description {
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    color: rgb(47, 43, 38);
+    text-align: center;
+}
+
+/* Call to Action Section */
+.cta-section {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("https://static.vecteezy.com/system/resources/previews/011/641/944/non_2x/crypto-currency-concept-background-bitcoin-digital-money-background-blue-futuristic-technology-background-illustration-free-vector.jpg");
+    background-size: cover;
+    background-position: center;
+    padding: 80px 0;
+    color: #fff;
+}
+
+.cta-heading {
+    font-family: "Caveat", cursive;
+    font-size: 40px;
+    font-weight: bold;
+    color: antiquewhite;
+    margin-bottom: 20px;
+}
+
+.cta-para {
+    font-family: "Roboto", sans-serif;
+    font-size: 18px;
+    color: antiquewhite;
+    margin-bottom: 30px;
+}
+
+.cta-buttons {
+    margin-top: 30px;
+}
+
+.cta-button-primary,
+.cta-button-secondary {
+    font-size: 16px;
+    padding: 10px 25px;
+    margin: 0 10px;
+}
+
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+    .services-main-heading {
+        font-size: 40px;
+    }
+    
+    .feature-content {
+        padding: 15px;
+        margin-top: 30px;
+    }
+    
+    .cta-buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .cta-button-primary,
+    .cta-button-secondary {
+        margin: 10px 0;
+        width: 80%;
+    }
+}
+
+@media (max-width: 576px) {
+    .services-main-heading {
+        font-size: 32px;
+    }
+    
+    .services-main-para {
+        font-size: 16px;
+    }
+    
+    .service-card,
+    .premium-card {
+        margin-bottom: 20px;
+    }
 }
